# tsaritsa

./: .env  .gitignore  asdffsad.py  pyproject.toml  test.py
tsaritsa/: __init__.py  __main__.py  app.py  config.py
tsaritsa/blueprints/: __init__.py
tsaritsa/blueprints/post/: __init__.py  send_message.py
tsaritsa/blueprints/views/: __init__.py  index.py
tsaritsa/templates/: index.html
tsaritsa/templates/static/: script.js  style.css
tsaritsa/tools/: llm.py
