[tool.poetry]
name = "tsaritsa"
version = "0.1.0"
description = "Feature-rich AI chat bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
langchain = "^0.1.2"
requests = "^2.31.0"
envparse = "^0.2.0"
openai = "^1.9.0"
langchain-openai = "^0.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
